entrance end pont return 404 when none found
