# docs/swagger.json
@@ -294,6 +294,12 @@
                         "schema": {
                             "$ref": "#/definitions/model.Entrance"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/rest.errorMessage"
+                        }
                     }
                 }
             }
@@ -500,6 +506,14 @@
                     "type": "string"
                 },
                 "problemcode": {
+                    "type": "string"
+                }
+            }
+        },
+        "rest.errorMessage": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
